--- a/src/app/views/login/password-recovery/recover-password.component.html
+++ b/src/app/views/login/password-recovery/recover-password.component.html
@@ -14,7 +14,7 @@
           placeholder="attenbase@attenbase.com" />
         <mat-hint>Ej.: attenbase@attenbase.com</mat-hint>
         <mat-error *ngIf="form.controls['email'].errors?.['required']">
-          Ingresá un correo electrónico válido. Ej.: attenbase@attenbase.com
+          El correo ingresado no coincide con una cuenta de Attenbase.
         </mat-error>
       </mat-form-field>
       <button
