cambio de estilos a las etiquetas de status

--- a/src/app/views/debug/debug.component.html
+++ b/src/app/views/debug/debug.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <h1>Components Custom</h1>
   <h2>Icon</h2>
-  <h2>Buttons</h2>
+  <h2>Estados (.state)</h2>
   <div class="container-buttons">
-    <button class="published">published</button>
-    <button class="approved">approved</button>
-    <button class="scheduled">scheduled</button>
-    <button class="review">review</button>
-    <button class="expire">expire</button>
-    <button class="rejected">rejected</button>
-    <button class="draft">draft</button>
-    <button class="archived">archived</button>
+    <div class="status published">.published</div>
+    <div class="status approved">.approved</div>
+    <div class="status scheduled">.scheduled</div>
+    <div class="status review">.review</div>
+    <div class="status expire">.expire</div>
+    <div class="status rejected">.rejected</div>
+    <div class="status draft">.draft</div>
+    <div class="status archived">.archived</div>
   </div>
 </div>
