users component mock-up

--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
@@ -1,153 +1,99 @@
-<div>
-  <h1>usuarios</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
-</div>
-<div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
-</div>
-<div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
-</div>
-<div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
-</div>
-<div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
-</div>
-<div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
-</div>
-<div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
-</div>
-<div>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
-    necessitatibus quos, omnis aliquam qui, cumque optio non suscipit error numquam magni id quae
-    placeat nam? Neque, molestias exercitationem.
-    <br />
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium explicabo dolorum itaque?
-    Officiis laboriosam non quis repellendus, quod officia dolorem rem id, voluptates nulla nihil
-    veniam accusamus fuga expedita alias! <br />Lorem ipsum dolor sit amet consectetur, adipisicing
-    elit. Reprehenderit nesciunt harum non blanditiis, labore deleniti iure perferendis aspernatur
-    ab unde. Ex repellendus nesciunt, expedita fuga eveniet iusto atque ea unde?<br />Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Eum iure ipsa sequi aliquid, voluptatum obcaecati
-    deleniti quibusdam! Exercitationem aliquam fuga deserunt pariatur voluptatibus recusandae earum
-    rerum minus, fugit accusamus ducimus! <br />
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet adipisci reprehenderit
-    accusantium distinctio laboriosam aspernatur ipsa voluptatum, quisquam voluptatibus deleniti
-    quasi ipsam cum! Vel assumenda nesciunt corporis commodi accusamus! <br />
-  </p>
+<div class="wrapper">
+  <div class="action">
+    <h1>Usuarios</h1>
+    <div>
+      <button mat-stroked-button color="primary" class="mr-10">
+        <mat-icon svgIcon="filter"></mat-icon>
+        Filtros
+      </button>
+      <button mat-flat-button color="primary">
+        <mat-icon>add</mat-icon>
+        Crear nuevo
+      </button>
+    </div>
+  </div>
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="username">
+      <th width="30%" mat-header-cell *matHeaderCellDef>
+        <span>Nombre y apellido</span>
+        <button>
+          <mat-icon>unfold_more</mat-icon>
+        </button>
+      </th>
+      <td class="username" mat-cell *matCellDef="let element" class="username">
+        {{ element.userName }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="useremail">
+      <th mat-header-cell *matHeaderCellDef>
+        Email
+        <button>
+          <mat-icon>unfold_more</mat-icon>
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.userEmail }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="lastlogin">
+      <th mat-header-cell *matHeaderCellDef>
+        Último login
+        <button>
+          <mat-icon>unfold_more</mat-icon>
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.lastLogin }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="userclients">
+      <th mat-header-cell *matHeaderCellDef>
+        Clientes habilitados
+        <button>
+          <mat-icon>unfold_more</mat-icon>
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.userClients }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="userrol">
+      <th mat-header-cell *matHeaderCellDef>
+        Rol
+        <button>
+          <mat-icon>unfold_more</mat-icon>
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.userRol }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="seeMore">
+      <th mat-header-cell width="40px" *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <div class="more-options">
+          <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>
+              <span>Eliminar</span>
+            </button>
+            <button mat-menu-item>
+              <span>Editar</span>
+            </button>
+          </mat-menu>
+          <div class="menu" [ngClass]="{ open: element.isOpen }"></div>
+        </div>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <mat-paginator
+    [pageIndex]="pageIndex"
+    [pageSize]="pageSize"
+    [disabled]="disabled"
+    [hidePageSize]="true">
+  </mat-paginator>
 </div>
