--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -68,7 +68,7 @@
         (click)="handleSubmitLogin()">
         Iniciar sesión
       </button>
-      <button mat-button [routerLink]="'olvide-mi-contraseña'" color="primary">
+      <button mat-button color="primary" [routerLink]="'olvide-mi-contraseña'">
         Recuperar contraseña
       </button>
     </form>
