--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -18,14 +18,16 @@
   <ng-container matColumnDef="state">
     <th mat-header-cell *matHeaderCellDef>Estado</th>
     <td mat-cell *matCellDef="let element">
-      <button [ngClass]="{ published: element.state === 'aprobada' }">{{ element.state }}</button>
+      <button class="status" [ngClass]="{ published: element.state === 'aprobada' }">
+        {{ element.state }}
+      </button>
     </td>
   </ng-container>
   <ng-container matColumnDef="seeMore">
     <th mat-header-cell width="40px" *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
       <div class="more-options">
-        <button [matMenuTriggerFor]="menu" aria-label="más opciones">
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="más opciones">
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
