--- a/src/assets/sass/components/states/states.scss
+++ b/src/assets/sass/components/states/states.scss
@@ -2,13 +2,14 @@
     font-family: "Roboto";
     font-size: 12px;
     text-transform: capitalize;
-    padding-top: 6px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
     font-weight: 500;
     border: none;
     min-width: 94px;
     width: auto;
-    text-align: center;
-    height: 22px;
+    height: 28px;
     border-radius: 8px;
     outline: none;
     &.published {
