integracion del flow de recupero de contraseña

--- a/src/app/views/login/password-recovery/recover-password.component.html
+++ b/src/app/views/login/password-recovery/recover-password.component.html
@@ -13,10 +13,14 @@
           matInput
           placeholder="attenbase@attenbase.com" />
         <mat-hint>Ej.: attenbase@attenbase.com</mat-hint>
+        <mat-error *ngIf="form.controls['email'].errors?.nonExistantEmail">
+          {{ form.controls['email'].errors?.nonExistantEmail }}
+        </mat-error>
         <mat-error *ngIf="form.controls['email'].errors?.['required']">
-          El correo ingresado no coincide con una cuenta de Attenbase.
+          Ingresá correo electrónico.
         </mat-error>
       </mat-form-field>
+
       <button
         mat-flat-button
         color="primary"
@@ -33,7 +37,7 @@
 <ng-template #watchEmail>
   <p>Recuperar contraseña</p>
   <span>Te enviamos un correo electrónico de verificación.</span>
-  <button mat-flat-buttoncolor="primary" type="button" [routerLink]="['login']">
+  <button mat-flat-button color="primary" type="button" [routerLink]="['login']">
     Volver al inicio
   </button>
   <button
@@ -46,12 +50,5 @@
     <ng-container *ngIf="!resendEnabled">
       {{ timer | numberToSeconds }}
     </ng-container>
-  </button>
-  <button
-    mat-flat-button
-    color="primary"
-    type="button"
-    [routerLink]="['/login/generar-nueva-contraseña']">
-    Generar contraseña
   </button>
 </ng-template>
