--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -26,6 +26,17 @@ h1 {
   font-size: 36px;
   font-weight: 400;
 }
+h2 {
+  color: #002020;
+  font-size: 32px;
+  font-weight: 400;
+}
+h3 {
+  color: #002020;
+  font-size: 28px;
+  font-weight: 400;
+  margin: 16px 0;
+}
 
 .container {
   width: 100%;
