--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -10,14 +10,14 @@
         {{ tab.label }}
       </a>
     </nav>
-    <div>
-      <button [matMenuTriggerFor]="menu" mat-stroked-button color="primary" class="mr-10">
-        <mat-icon svgIcon="filter"></mat-icon>
-        Filtros
-      </button>
-      <mat-menu #menu="matMenu" xPosition="before">
-        <bdc-bo-menu-filter></bdc-bo-menu-filter>
-      </mat-menu>
+    <div class="action">
+      <div class="menu">
+        <button mat-stroked-button color="primary" (click)="openMenu()">
+          <mat-icon svgIcon="filter"></mat-icon>
+          Filtros
+        </button>
+        <bdc-bo-menu-filter *ngIf="isOpen"></bdc-bo-menu-filter>
+      </div>
       <button
         mat-flat-button
         color="primary"
@@ -31,3 +31,5 @@
     <bdc-bo-tabla-question [questions]="questions"></bdc-bo-tabla-question>
   </mat-tab-nav-panel>
 </div>
+
+<button (click)="openMenu()">{{ isOpen }}</button>
