--- a/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
@@ -1,4 +1,12 @@
 .wrapper {
-    margin: 50px;
-    padding: 32px 23px;
+    background-color: white;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border-radius: 8px;
+    padding: 30px 20px;
+    width: 380px;
+    display: flex;
+    flex-direction: column;
+    .action {
+        align-self: flex-end;
+    }
 }
