--- a/src/assets/sass/components/states/states.scss
+++ b/src/assets/sass/components/states/states.scss
@@ -2,13 +2,12 @@
     font-family: "Roboto";
     font-size: 12px;
     text-transform: capitalize;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: 500;
     border: none;
-    min-width: 94px;
-    width: auto;
+    width: 110px;
     height: 28px;
     border-radius: 8px;
     outline: none;
