--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -19,18 +19,18 @@
     <ng-container matColumnDef="lastupdate">
       <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
       <td mat-cell *matCellDef="let element">
+        {{ element.due_at | date: 'd MMM, y, h:mm a' }}
+        hasta
         {{ element.publish_at | date: 'd MMM, y, h:mm a' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="state">
       <th mat-header-cell *matHeaderCellDef>Estado</th>
       <td mat-cell *matCellDef="let element">
-        <button class="status" [ngClass]="{ published: element.state === 'aprobada' }">
-          {{ element.status_id }}
-          <!-- <bdc-question-status [statusId]="element.status_id"></bdc-questionStatus> -->
-        </button>
-      </td>
-    </ng-container>
+        <bdc-bo-status-question [class]="element.status.class" [name]="element.status.name">
+        </bdc-bo-status-question></td
+    ></ng-container>
+
     <ng-container matColumnDef="seeMore">
       <th mat-header-cell width="40px" *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
