--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -15,7 +15,7 @@
           Ingresá un correo electrónico válido. Ej.: attenbase@attenbase.com
         </mat-error>
         <mat-error *ngIf="form.controls['username'].errors?.nonExistantEmail">
-          El correo no coincide con una cuenta de Attenbase.
+          Los datos que ingresaste son incorrectos.
         </mat-error>
         <mat-hint>Ej.: attenbase@attenbase.com</mat-hint>
       </mat-form-field>
@@ -50,7 +50,7 @@
           Ingresá una contraseña
         </mat-error>
         <mat-error *ngIf="form.controls['password'].errors?.nonExistantEmail">
-          Mínimo 8 caracteres, una letra en mayúscula, un número y un caracter especial (ej.:#$%!)
+          Los datos que ingresaste son incorrectos.
         </mat-error>
         <mat-error
           *ngIf="form.controls['password'].errors?.['pattern'] && form.controls['password'].dirty"
