--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -19,7 +19,7 @@
     <ng-container matColumnDef="lastupdate">
       <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.due_at | date: 'd MMM, y, h:mm a' }}
+        {{ element.due_at | date: 'd MMM, y, h:mm a' }} <br />
         hasta
         {{ element.publish_at | date: 'd MMM, y, h:mm a' }}
       </td>
@@ -34,32 +34,9 @@
     <ng-container matColumnDef="seeMore">
       <th mat-header-cell width="40px" *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <div class="more-options">
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="más opciones">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item>
-              <span>Previsualizar</span>
-            </button>
-            <button mat-menu-item>
-              <span>Editar</span>
-            </button>
-            <button mat-menu-item>
-              <span>Archivar</span>
-            </button>
-            <button mat-menu-item>
-              <span>Publicar</span>
-            </button>
-            <button mat-menu-item>
-              <span>Nueva Versión</span>
-            </button>
-            <button mat-menu-item>
-              <span>Solicitar aprobación</span>
-            </button>
-          </mat-menu>
-          <div class="menu" [ngClass]="{ open: element.isOpen }"></div>
-        </div>
+        <bdc-bo-menu-question
+          [statusQuestion]="element.status.name"
+          [idQuestion]="element.id"></bdc-bo-menu-question>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
