usercomponent newuser mockup

--- a/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.scss
@@ -30,6 +30,9 @@ form {
   max-width: 600px;
   padding-bottom: 30px;
 }
+mat-error {
+  font-size: 12px;
+}
 mat-hint {
   color: #73777f;
   font-size: 12px;
