--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.scss
@@ -10,11 +10,22 @@
 th {
   width: max-content;
   min-width: min-content;
+  font-size: 14px;
+  font-weight: 500;
+}
+td {
+  font-size: 12px;
+  color: #999999;
+  // max-width: 180px;
+
+  &::first-letter {
+    text-transform: capitalize;
+  }
 }
 td div {
-  max-width: 200px;
   display: flex;
   width: max-content;
+  max-width: 180px;
   overflow-x: scroll;
 }
 td div::-webkit-scrollbar {
