wording fixes edit synonym

--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.scss
@@ -12,6 +12,10 @@ mat-form-field {
   width: 100%;
   margin-bottom: 35px;
 }
+mat-hint {
+  font-size: 12px;
+  color: #73777f;
+}
 .max-w-500 {
   max-width: 500px;
 }
