--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <h2>Editar Sinóninmo de Negocio</h2>
+  <h2>Editar Sinónimo de Negocio</h2>
   <form [formGroup]="form" class="edit-synonyms-form">
     <mat-form-field appearance="outline" class="max-w-500">
       <mat-label>Nombre de original</mat-label>
